Wed Feb 23 14:46:16 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Muscat36 backend now replaces DA backend.
	  Should be able to cope with both flimsy and heavy duty DA files.
	  DB stuff will be added shortly.

Wed Feb 23 14:44:58 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added (mostly private unimplemented) copy-constructors and
	  assignment operators to several classes.  Also added some
	  virtual destructors where needed.

Mon Feb 21 18:07:14 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Attempts to build a query with a boolean subquery throws an
	  exception for now.

Mon Feb 21 15:33:10 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added test for OmEnquire::get_matching_terms()

	* Fixed OmEnquire::get_matching_terms

Mon Feb 21 14:38:30 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Made OmQuery::get_terms() public, tightened the specification,
	  and made it conform to the specification.
	
	* Added a test for the above to apitest

	* Fixed a bug in OmQuery::initialise_from_copy() to make the above
	  test work.

Fri Feb 18 18:06:21 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Databases now have a get_doclength() method, to return the length
	  of a given document.  There may be efficiency issues with using
	  this during the search, however.

	* Extra constant terms, such as that in BM25Weight, now used
	  and accounted for in min weight calculations.

Fri Feb 18 17:49:13 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmQuery::get_terms now returns the terms in termpos order.

Fri Feb 18 13:53:34 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

        * Added second test for reversed boolean queries.
	  (When the full mset is not returned.)

Fri Feb 18 13:54:37 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented match functors

	* IRDocument is now OmDocument, on <om/omdocument.h>
