@@ -39,7 +39,23 @@ EXTRA_DIST = testdata/apitest_onedoc.txt \
              testdata/apitest_simpledata.txt \
              testdata/apitest_simpledata2.txt
 
+# Cunning piece of code to generate a dependency file (filename in shell
+# variable destfile), for target $@, mostly taken from docs/Makefile.am
+GENDEPS = \
+echo "$@ : " $$depends > $$destfile ; \
+for p in $$depends ; do \
+  echo $$p | sed -e 's/^\\$$//' -e '/^$$/d' -e '/:$$/d' | \
+  sed -e 's/$$/ :/' >> $$destfile ; \
+done ;
+
+ALL_INCLUDES = `find $(top_srcdir) -name \*.h -print`
+
+-include .deps-includetest-cc
+
 ## Extra rules:
 includetest.cc: 
-	find ${top_srcdir} -name '*.h' -print | grep -v sleepy | sed 's/\(.*\)/#include "\1"/' > $@
+	@depends="$(ALL_INCLUDES)"; destfile=".deps-includetest-cc"; $(GENDEPS)
+	for header in $(ALL_INCLUDES) ; do \
+	   echo $$header ;\
+	done | grep -v sleepy | sed 's/\(.*\)/#include "\1"/' > $@
 	echo 'int main() { return 0; }' >> $@
